[gd_scene load_steps=15 format=3 uid="uid://c2a8ngge05k7t"]

[ext_resource type="Script" path="res://scenes/enemy/shadow_enemy.gd" id="1_qvcdo"]
[ext_resource type="Script" path="res://scenes/health.gd" id="2_2tcm3"]
[ext_resource type="Script" path="res://scenes/enemy/state_machine.gd" id="3_0rj1h"]
[ext_resource type="Texture2D" uid="uid://sg3ls2pop1xj" path="res://assets/animations/shadowsprite/Rock_Shadow_Spirit_1.PNG" id="3_0yplg"]
[ext_resource type="Script" path="res://scenes/enemy/states/walk_state.gd" id="4_pvnhg"]
[ext_resource type="Texture2D" uid="uid://3raayxvdd0ir" path="res://assets/animations/shadowsprite/Rock_Shadow_Spirit_2.PNG" id="4_yxkag"]
[ext_resource type="Script" path="res://scenes/enemy/states/attack_state.gd" id="5_hpdbb"]
[ext_resource type="Texture2D" uid="uid://ba5so85qp61im" path="res://assets/animations/shadowsprite/Rock_Shadow_Spirit_3.PNG" id="5_vkoyo"]
[ext_resource type="Texture2D" uid="uid://dt5ed3h23dng0" path="res://assets/animations/shadowsprite/Rock_Shadow_Spirit_4.PNG" id="6_hky20"]
[ext_resource type="PackedScene" uid="uid://jci63uf5o54n" path="res://scenes/ui/healthbar.tscn" id="7_d4e3b"]

[sub_resource type="Animation" id="Animation_llao3"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_0yplg"), ExtResource("4_yxkag"), ExtResource("5_vkoyo"), ExtResource("6_hky20")]
}

[sub_resource type="Animation" id="Animation_an6pc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0yplg")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0swy"]
_data = {
"RESET": SubResource("Animation_an6pc"),
"walk": SubResource("Animation_llao3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xycco"]

[node name="ShadowEnemy" type="CharacterBody2D" node_paths=PackedStringArray("state_machine")]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_qvcdo")
move_speed = 10000.0
state_machine = NodePath("StateMachine")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_2tcm3")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_0yplg")
region_rect = Rect2(600, 100, 2150, 2350)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h0swy")
}
autoplay = "walk"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_0rj1h")
initial_state = NodePath("EnemyWalkState")

[node name="EnemyWalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_pvnhg")
enemy = NodePath("../..")

[node name="EnemyAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_hpdbb")
enemy = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.8, 3.8)
shape = SubResource("RectangleShape2D_xycco")

[node name="Healthbar" parent="." instance=ExtResource("7_d4e3b")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -13.0
offset_bottom = -13.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="BarUnder" parent="Healthbar" index="0"]
offset_left = -24.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = 9.0

[node name="BarOver" parent="Healthbar" index="1"]
offset_left = -24.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = 9.0

[connection signal="changed" from="Health" to="Healthbar" method="_on_health_changed"]
[connection signal="death" from="Health" to="." method="_on_health_death"]

[editable path="Healthbar"]
